force-app/main/default/objects/Product2/fields/Send_To_API_Layer__c.field-meta.xml
<CustomField>
    <fullName>Send_To_API_Layer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Send Record To Kafka</inlineHelpText>
    <label>Send to Kafka</label>
    <type>Checkbox</type>
</CustomField>