force-app/main/default/objects/Product2/fields/Specification_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Specification_Sheet__c</fullName>
    <label>Specification Sheet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attachment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>