force-app/main/default/objects/Product2/fields/Support_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Support_End_Date__c</fullName>
    <label>Support End Date</label>
    <type>Date</type>
</CustomField>