force-app/main/default/objects/Product2/fields/Term_Based_Discount__c.field-meta.xml
<CustomField>
    <fullName>Term_Based_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Term Based Discount</label>
    <type>Checkbox</type>
</CustomField>