force-app/main/default/objects/Product2/fields/TEST_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>TEST_Auto_Number__c</fullName>
    <displayFormat>T-{00000}</displayFormat>
    <label>TEST Auto Number</label>
    <type>AutoNumber</type>
</CustomField>