force-app/main/default/objects/Product2/fields/Unit_of_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measurement__c</fullName>
    <label>Unit of Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sqft</fullName>
            </value>
            <value>
                <fullName>Nos</fullName>
            </value>
            <value>
                <fullName>Unit</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>KWH / KW</fullName>
            </value>
            <value>
                <fullName>VA/ KVA</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>Mtr</fullName>
            </value>
            <value>
                <fullName>GB</fullName>
            </value>
            <value>
                <fullName>TB</fullName>
            </value>
            <value>
                <fullName>Per Day</fullName>
            </value>
            <value>
                <fullName>Mbps</fullName>
            </value>
            <value>
                <fullName>Gbps</fullName>
            </value>
            <value>
                <fullName>Per Cubic Meter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>