force-app/main/default/objects/Product2/fields/Variable_Product__c.field-meta.xml
<CustomField>
    <fullName>Variable_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Variable Product</label>
    <type>Checkbox</type>
</CustomField>