force-app/main/default/objects/Product2/fields/Variable_UOM__c.field-meta.xml
<CustomField>
    <fullName>Variable_UOM__c</fullName>
    <label>Variable UOM</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Variable_Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hour</fullName>
            </value>
            <value>
                <fullName>GB</fullName>
            </value>
            <value>
                <fullName>TB</fullName>
            </value>
            <value>
                <fullName>Mbps</fullName>
            </value>
            <value>
                <fullName>Tickets</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Unit</fullName>
            </value>
            <value>
                <fullName>Per Cubic Meter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>