force-app/main/default/objects/Product2/validationRules/Product_Activation_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Activation_Not_Allowed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED( IsActive ),
    NOT($Permission.Product_Activation_Permission )
)</errorConditionFormula>
    <errorDisplayField>IsActive</errorDisplayField>
    <errorMessage>You are not authorized to activate/deactivate Product</errorMessage>
</ValidationRule>