force-app/main/default/objects/Product2/listViews/Variable_Products.listView-meta.xml
<ListView>
    <fullName>Variable_Products</fullName>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Product_Code__c</columns>
    <columns>SAP_Product__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Model_Name__c</columns>
    <columns>Product_Line__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Restrict_Contract_Generation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Variable_Product__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Variable Products</label>
</ListView>