force-app/main/default/objects/Product2/listViews/X08_Virtual_Desktop_AAS_with_comp.listView-meta.xml
<ListView>
    <fullName>X08_Virtual_Desktop_AAS_with_comp</fullName>
    <columns>Product_Code__c</columns>
    <columns>SAP_Product__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Model_Name__c</columns>
    <columns>Product_Line__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Billing_to_be_done_Online__c</columns>
    <columns>SBQQ__Component__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
        <value>14100</value>
    </filters>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>14,Yotta Cloud</value>
    </filters>
    <filters>
        <field>Model_Name__c</field>
        <operation>contains</operation>
        <value>Virtual Desktop as a Service</value>
    </filters>
    <label>08. Virtual-Desktop AAS (with comp)</label>
</ListView>